ci: change git user

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -22,10 +22,11 @@ jobs:
           distribution: 'adopt'
           cache: maven
 
-      - name: Configure Git identity
+      - name: Configure Git User
         run: |
-          git config --local user.name "redocmx automated deployment"
-          git config --local user.email "soporte@redoc.mx"
+          git config user.email "actions@github.com"
+          git config user.name "GitHub Actions"
+          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
       - name: Import GPG key
         uses: crazy-max/ghaction-import-gpg@v3
