--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -12,8 +12,6 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-        with:
-          ref: main
 
       - name: Set up JDK 11
         uses: actions/setup-java@v4
@@ -38,14 +36,10 @@ jobs:
         run: |
           mvn -B -U \
             -Pci-cd \
-            release:prepare \
-            release:perform \
-            javadoc:jar \
-            source:jar \
+            release:prepare release:perform \
             -DskipTests \
             -Dgpg.passphrase=${{ secrets.MAVEN_GPG_PASSPHRASE }} \
             -DossrhUsername=${{ secrets.MAVEN_OSSRH_USERNAME }} \
             -DossrhPassword=${{ secrets.MAVEN_OSSRH_PASSWORD }}
-            deploy
         env:
           GPG_EXECUTABLE: gpg
